--- a/mysite/elections/templates/elections/templates3.html
+++ b/mysite/elections/templates/elections/templates3.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
 </style>
@@ -13,7 +14,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
 
 <!-- Navigation Bar -->
 <ul class="w3-navbar w3-white w3-large" >
-  <li><a href="#" class="w3-blue"><i class="fa fa-bed w3-margin-right"></i>La Pista</a></li>
+  <li><a href="#" class="w3-blue"><i class="fa fa-plane w3-margin-right"></i>La Pista</a></li>
   <li><a href="#rooms">My Page</a></li>
   <li><a href="#about">My Travel list</a></li>
   <li><a href="#contact">Sign out</a></li>
@@ -21,12 +22,11 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
 </ul>
 
 <!-- Header -->
-<header class="w3-display-container w3-content" style="max-width:1300px;">
   {% load staticfiles %}
-  <img class="w3-image" src="{% static 'map.jpg' %}" alt="Maps" style="min-width:1000px" width="1100" height="1000">
-  <div class="w3-display-right w3-padding w3-col l6 m8">
+  <img class="w3-image" src="{% static 'map.jpg' %}" alt="Maps" style="min-width:1000px"  width=10% height="1300">
+  <div class="w3-display-right w3-padding w3-col l6 m8" style="max-width:617px">
     <div class="w3-container w3-blue">
-      <h2><i class="fa fa-bed w3-margin-rigt"></i>Departure&Arrival</h2>
+      <h2><i class="fa fa-plane w3-margin-right"></i> Departure&Arrival</h2>
     </div>
     <div class="w3-container w3-white w3-padding-16">
       <form action="form.asp" target="_blank">
@@ -49,13 +49,38 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
             <label><i class="fa fa-child"></i> Kids</label>
           <input class="w3-input w3-border" type="number" value="0" name="Kids" min="0" max="6">
           </div>
-        </div>
-        <button class="w3-btn w3-dark-grey" type="submit"><i class="fa fa-search w3-margin-right"><a href='maps/'></i> Search availability</a></button>
-      </form>
-    </div>
-  </div>
-</header>
+          <br><br><br><br><br>
+          <h4> Options </h4>
+          <h5>Stops :   </h5>
+          <input type ="checkbox" name="Non-Stop" checked="checked" /> Non-Stop
+           <input type ="checkbox" name="1 Stop" checked="checked" /> 1 Stop
+            <input type ="checkbox" name="Non-Stop" checked="checked" /> 2Stops
+<br><br>
+           <div class="w3-half w3-margin-bottom">
+            <label><i class="fa fa-calendar-o"></i> Max Flight Time</label>
+            <input class="w3-input w3-border" type="text" placeholder="Hours Miniutes" name="Departure" required>
+          </div>
+<br><br><br><br>
+           <div class="w3-half w3-margin-bottom">
+            <label><i class="fa fa-calendar-o"></i> Max Layover Time</label>
+            <input class="w3-input w3-border" type="text" placeholder="Hours Miniutes" name="Departure" required>
+          </div>
 
+          <br><br><br><br>
+           <div class="w3-half w3-margin-bottom">
+            <label><i class="fa fa-calendar-o"></i> Luggage weight</label>
+            <input class="w3-input w3-border" type="text" placeholder="Hours Miniutes" name="Departure" required>
+          </div>
+
+
+        </div>
+
+        <button class="w3-btn w3-dark-grey" type="submit"><i class="fa fa-search w3-margin-right"><a href='template4/'></i> Search</a></button>
+      </form>
+
+    </div>
+
+  </div>
 
 </body>
 </html>
