--- a/mysite/elections/templates/elections/index.html
+++ b/mysite/elections/templates/elections/index.html
@@ -32,20 +32,7 @@
  <ul class="w3-navbar w3-theme-d2 w3-left-align">
   <li class="w3-hide-medium w3-hide-large w3-opennav w3-right">
     <a class="w3-hover-white w3-theme-d2" href="javascript:void(0);" onclick="openNav()"><i class="fa fa-bars"></i></a>
-  </li>
-  <li><a href="#" class="w3-teal"><i class="fa fa-home w3-margin-right"></i>Logo</a></li>
-  <li class="w3-hide-small"><a href="#my page" class="w3-hover-white">Team</a></li>
-  <li class="w3-hide-small"><a href="#my travel list" class="w3-hover-white">Work</a></li>
-  <li class="w3-hide-small"><a href="#search" class="w3-hover-white">Price</a></li>
-  <li class="w3-hide-small"><a href="#logout" class="w3-hover-white">Contact</a></li>
-  <li class="w3-hide-small w3-dropdown-hover">
-    <a href="javascript:void(0);" title="Notifications">Dropdown <i class="fa fa-caret-down"></i></a>     
-    <div class="w3-dropdown-content w3-white w3-card-4">
-      <a href="#">Link</a>
-      <a href="#">Link</a>
-      <a href="#">Link</a>
-    </div>
-  </li>
+  
   <li class="w3-hide-small w3-right"><a href="#" class="w3-hover-teal" title="Search"><i class="fa fa-search"></i></a></li>
  </ul>
 </head> 
@@ -55,7 +42,7 @@
   <p><strong>We will travel with you <br> Get flight plans with optimized route!!</strong></p>
   
   <ul>
-    <li> <a href="http://www.naver.com/"> ho </a> </li> </ul>
+    <li> <a href="index2/"> My travel list </a> </li> </ul>
 </div>
 <script type="text/javascript">
 $( function() {
