--- a/mysite/elections/templates/elections/templates3.html
+++ b/mysite/elections/templates/elections/templates3.html
@@ -16,7 +16,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
 <ul class="w3-navbar w3-white w3-large" >
   <li><a href="#" class="w3-blue"><i class="fa fa-plane w3-margin-right"></i>La Pista</a></li>
   <li><a href="#rooms">My Page</a></li>
-  <li><a href="#about">My Travel list</a></li>
+  <li><a href="index2/">My Travel list</a></li>
   <li><a href="#contact">Sign out</a></li>
   <li class="w3-right w3-light-grey"><a href="#contact">Book Now</a></li>
 </ul>
